Bug #32799: ec2-test: Re-add APP_ID to install_apps_test_package
Lost in translation to utils.sh by r46865.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48502 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
@@ -52,7 +52,7 @@ command3:
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
- . utils.sh; install_apps_test_packages
+ . utils.sh; install_apps_test_packages APP_ID
 command5:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master100_IP]:ucs-test.log .
