--- a/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
@@ -85,7 +85,7 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  . utils.sh; install_ucs_test
- . utils.sh; install_apps_test_packages
+ . utils.sh; install_apps_test_packages APP_ID
 command6:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup103_IP]:ucs-test.log .
