--- a/test/ucs-ec2-tools/examples/jenkins/autotest-124-appupdate-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-124-appupdate-slave-s3.cfg
@@ -91,7 +91,7 @@ command5:
  . utils.sh; run_join_scripts
 command6:
  . utils.sh; install_ucs_test
- . utils.sh; install_apps_test_packages
+ . utils.sh; install_apps_test_packages APP_ID
 command7:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave124_IP]:ucs-test.log .
