--- a/doc/errata/staging/2014-03-12-univention-mail-postfix.yaml
+++ b/doc/errata/staging/2014-03-12-univention-mail-postfix.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-mail-postfix
-fix: 8.0.10-3.210.201403111223
+fix: 8.0.11-1.211.201403131645
 note:
 version: [1]
 desc: |
@@ -11,4 +11,7 @@ desc: |
 	groups and lists) is now executed as user listfilter instead of the user
     cyrus to allow this feature also in environments without the 
     component univention-mail-cyrus.
-bug: [26910]
+  * The new UCR variable mail/postfix/ldaptable/starttls has been introduced to
+	define whether postfix should use an encrypted (TLS) connection for ldap
+    lookups (default: yes).
+bug: [26910,34198]
