* Activate vfs_dfs_samba4 on sysvol and netlogon (Bug #34326) * Set samba/enable-msdfs?yes by default and =yes for this update
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48538 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/conffiles/etc/samba/base.conf
+++ b/services/univention-samba4/conffiles/etc/samba/base.conf
@@ -12,9 +12,9 @@ if configRegistry.is_true('samba/share/netlogon', True):
 		print '\tcase sensitive = no'
 		samba4_ntacl_backend = configRegistry.get('samba4/ntacl/backend', 'native')
 		if samba4_ntacl_backend == 'native':
-			print '\tvfs objects = acl_xattr'
+			print '\tvfs objects = dfs_samba4 acl_xattr'
 		elif samba4_ntacl_backend == 'tdb':
-			print '\tvfs objects = acl_tdb'
+			print '\tvfs objects = dfs_samba4 acl_tdb'
 	if configRegistry.get('samba4/role') == 'DC':
 		print '\tread only = no'
 	else:
@@ -30,9 +30,9 @@ if configRegistry.is_true('samba/share/sysvol', True):
 		print '\tcase sensitive = no'
 		samba4_ntacl_backend = configRegistry.get('samba4/ntacl/backend', 'native')
 		if samba4_ntacl_backend == 'native':
-			print '\tvfs objects = acl_xattr'
+			print '\tvfs objects = dfs_samba4 acl_xattr'
 		elif samba4_ntacl_backend == 'tdb':
-			print '\tvfs objects = acl_tdb'
+			print '\tvfs objects = dfs_samba4 acl_tdb'
 	if configRegistry.get('samba/share/sysvol/readonly'):
 		print '\tread only = %s' % configRegistry.get('samba/share/sysvol/readonly')
 	elif configRegistry.get('samba4/role') == 'DC':
