--- a/doc/errata/staging/2014-03-10-univention-config-registry.yaml
+++ b/doc/errata/staging/2014-03-10-univention-config-registry.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-config-registry
-fix: 9.0.6-7.455.201403111545
+fix: 9.0.6-9.462.201403131621
 note:
 version: [1]
 desc: |
@@ -10,4 +10,7 @@ desc: |
   * In some cases the file ownership was not preserved correctly when a file is committed.
   * The program "univention-check-templates" now also checks UCR template files
     for modifications by using the MD5 hash sum managed by dpkg.
-bug: [34241,24010]
+  * If the LDAP server is not available the tool univention-ldapsearch now tries to reconnect to
+    the LDAP server. The count can be configured via the UCR variable ldap/client/retry/count. the
+    value is set by default to 10.
+bug: [34241,24010,34293]
