--- a/doc/errata/staging/2014-03-13-univention-base-files.yaml
+++ b/doc/errata/staging/2014-03-13-univention-base-files.yaml
@@ -2,11 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-base-files
-fix: 3.0.4-4.155.201403130716
+fix: 3.0.4-7.158.201403140707
 note:
 version: [1]
 desc: |
-  The /etc/issue welcome message mentions where to find the management system.
-  After installing this update the message will only be shown on domain controllers
-  and member servers.
-bug: [34330]
+  This update fixes the following issues:
+  * The /etc/issue welcome message mentions where to find the management system.
+    After installing this update the message will only be shown on domain controllers
+    and member servers.
+  * The UCR variable ldap/client/retry/count is set to 10 by default.
+bug: [34330,34292]
