yaml Bug #34321: improve wording
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48548 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-03-13-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-03-13-univention-virtual-machine-manager-daemon.yaml
@@ -7,6 +7,6 @@ note:
 version: [1]
 desc: |
   This update fixes the following issues:
-  * Use force-stop and force-restart in uvmmd-initscript to support
-    blocked processes
+  * Use force-stop and force-restart in UVMMd-initscript to handle
+    blocked UVMMd processes
 bug: [34321]
