use /var/run/nagios/nrpe.pid as PID file for nrpe server (Bug #34063)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48571 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/conffiles/etc/nagios/nrpe.cfg
+++ b/nagios/univention-nagios/conffiles/etc/nagios/nrpe.cfg
@@ -18,7 +18,7 @@
 # number.  The file is only written if the NRPE daemon is started by the root
 # user and is running in standalone mode.
 
-pid_file=/var/run/nrpe.pid
+pid_file=/var/run/nagios/nrpe.pid
 
 
 
