--- a/doc/errata/staging/2014-03-13-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-03-13-univention-virtual-machine-manager-daemon.yaml
@@ -6,7 +6,7 @@ fix: 3.0.17-6.489.201403131114
 note:
 version: [1]
 desc: |
-  This update fixes the following issues:
-  * Use force-stop and force-restart in UVMMd-initscript to handle
-    blocked UVMMd processes
+  This update fixes the following issue:
+  * Use force-stop and force-restart in the initscript of Univention
+    Virtual Machine Manager to handle blocked UVMMd processes
 bug: [34321]
