--- a/doc/errata/staging/2014-03-10-univention-config-registry.yaml
+++ b/doc/errata/staging/2014-03-10-univention-config-registry.yaml
@@ -6,7 +6,7 @@ fix: 9.0.6-9.462.201403131621
 note:
 version: [1]
 desc: |
-  This update fixes the following issues in the Univention Configuration Registry (UCR) package:
+  This update fixes the following issues:
   * In some cases the file ownership was not preserved correctly when a file is committed.
   * The program "univention-check-templates" now also checks UCR template files
     for modifications by using the MD5 hash sum managed by dpkg.
