Bug #33966: uvmm-node-common: fix yaml
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48581 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-03-14-univention-virtual-machine-manager-node.yaml
+++ b/doc/errata/staging/2014-03-14-univention-virtual-machine-manager-node.yaml
@@ -8,6 +8,6 @@ version: [1]
 desc: |
   This update fixes the following issues:
   * Add libvirt-check.sh to virtualization nodes. It periodically tests if
-    libvirtd responds and restarts libvirtd if necessary. (Bug #33966)
-  * Change to libvirt-bin initscript: use sv force-stop and sv force-restart
+    libvirtd responds and restarts libvirtd if necessary.
+  * Change libvirt-bin initscript to use sv force-stop and sv force-restart.
 bug: [33966]
