--- a/doc/errata/staging/2014-03-17-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/staging/2014-03-17-univention-management-console-module-appcenter.yaml
@@ -2,11 +2,14 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-management-console-module-appcenter
-fix: 3.0.51-5.239.201403171157
+fix: 3.0.51-6.240.201403171531
 note:
 version: [1]
 desc: |
   This errata update fixes several issues:
   * Renamed the App ID for "Tine 2.0" from tine20org to tine20 to reflect that
     this is the commercial version.
-bug: [33728]
+  * Components in the App Center's tab "Repository Settings" may have default
+    packages which can be installed via the grid. Before this is done, the App
+    Center now updates the package list.
+bug: [33728, 34278]
