--- a/doc/developer-reference/apps/application.ini
+++ b/doc/developer-reference/apps/application.ini
@@ -123,6 +123,11 @@ UserActivationRequired=True
 # allow installation on these server roles
 ServerRole=domaincontroller_master,domaincontroller_backup,domaincontroller_slave,memberserver
 
+# allow installation on these architectures
+#   possible values are (comma separated): amd64, i386
+# if not set, both architectures are supported
+#SupportedArchitectures=amd64,i386
+
 # whether a "Shop" button is displayed in the App details, leading to the ShopURL
 UseShop=True
 
