--- a/doc/errata/staging/2014-03-17-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/staging/2014-03-17-univention-management-console-module-appcenter.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-management-console-module-appcenter
-fix: 3.0.51-6.240.201403171531
+fix: 3.0.51-7.241.201403202158
 note:
 version: [1]
 desc: |
@@ -12,4 +12,6 @@ desc: |
   * Components in the App Center's tab "Repository Settings" may have default
     packages which can be installed via the grid. Before this is done, the App
     Center now updates the package list.
-bug: [33728, 34278]
+  * Applications may now specify supported architectures. If an application
+    only supports 64bit, a 32bit operating system will refuse to install it.
+bug: [33728, 34278, 34320]
