--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -45,6 +45,7 @@ command1:
 command2:
  . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
+ ucr set samba/debug/level=4
 command3:
  # None
 command4:
