Bug #33444 UVMM/Doc: Update URL to network bridge configuration
Move UVMM/Bridge configuration from extended documentation to main
manual: The primary part about disabling the UVMM scripts is added to
the section about configuring Bridges/Bonding/VLANs, while the second
part is added to the UVMM chapter as a new section describing UVMM
profiles.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48889 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/extended-docs/Makefile
+++ b/doc/extended-docs/Makefile
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-MAIN := installation-3.2 performance-guide-3.2 networks-3.2 printers-3.2 computers-3.2
+MAIN := installation-3.2 performance-guide-3.2 networks-3.2 printers-3.2
 MAIN += domain-3.2 windows-3.2 uvmm-3.2
 STYLESHEET := univention_extdocs
 
