--- a/doc/errata/staging/2014-03-14-univention-virtual-machine-manager-node.yaml
+++ b/doc/errata/staging/2014-03-14-univention-virtual-machine-manager-node.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-virtual-machine-manager-node
-fix: 2.0.5-4.75.201403171004
+fix: 2.0.5-5.76.201403311132
 note:
 version: [1]
 desc: |
@@ -10,4 +10,6 @@ desc: |
   * Add libvirt-check.sh to virtualization nodes. It periodically tests if
     libvirtd responds and restarts libvirtd if necessary.
   * Change libvirt-bin initscript to use sv force-stop and sv force-restart.
-bug: [33966]
+  * The documentation for configuring bridges has been moved from the extended
+    documentation into the main manual. The links were updated accordingly.
+bug: [33966,33444]
