--- a/doc/errata/staging/2014-01-08-samba.yaml
+++ b/doc/errata/staging/2014-01-08-samba.yaml
@@ -7,15 +7,6 @@ note:
 version: [0]
 desc: |
  This errata fixes the following issues in the samba package:
- * Adjustments to GPO security filters (aka delegation) made by the Group Policy
-   Management Console (GPMC) could get lost in the sysvol filesystem (replaced
-   by older settings) during the sysvol synchronization. In this case starting
-   GPMC issued a warning message and GPO evaluation could lead to unexpected
-   results on Windows clients. This errata update causes Samba to update
-   modification timestamps of GPO files in the sysvol share whenever ACLs are
-   changed by the GPMC for security filtering. The new modification timestamps
-   prevent the changed file ACLs to be overwritten during the rsync of sysvol.
-   Basically this is a workaround for a behaviour specific to rsync.
  * Versions in the package dependencies have been updated.
  * Domain account lockout support for Samba4 DCs has been implemented.
  * The domain services database module was affected by a segmentation fault
@@ -23,4 +14,4 @@ desc: |
  * The subcommand conflicts to handle conflicted objects has been added to
    samba-tool drs.
  * samba-tool dbcheck now also lists/handles objects without objectClass.
-bug: [33751, 33972, 32974, 33977, 33616]
+bug: [33972, 32974, 33977, 33616]
