* Advisory for Bug #34370
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48915 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-08-samba.yaml
+++ b/doc/errata/staging/2014-01-08-samba.yaml
@@ -1,8 +1,8 @@
 product: ucs
 release: "3.2"
-scope: ucs_3.2-0-errata3.2-0
+scope: ucs_3.2-0-errata3.2-1
 src: samba
-fix: 2:4.1.0-1.627.201402191214
+fix: 2:4.1.0-1.632.201403191644
 note: 
 version: [0]
 desc: |
@@ -14,4 +14,5 @@ desc: |
  * The subcommand conflicts to handle conflicted objects has been added to
    samba-tool drs.
  * samba-tool dbcheck now also lists/handles objects without objectClass.
-bug: [33972, 32974, 33977, 33616]
+ * Randomize DCs in DFS referral replies, e.g. for the sysvol share
+bug: [33972, 32974, 33977, 33616, 34370]
