* Update for Bug #34305
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48918 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-08-samba.yaml
+++ b/doc/errata/staging/2014-01-08-samba.yaml
@@ -15,4 +15,7 @@ desc: |
    samba-tool drs.
  * samba-tool dbcheck now also lists/handles objects without objectClass.
  * Randomize DCs in DFS referral replies, e.g. for the sysvol share
-bug: [33972, 32974, 33977, 33616, 34370]
+ * Fix for CVE-2013-4496
+bug: [33972, 32974, 33977, 33616, 34305, 34370]
+cve:
+ - CVE-2013-4496
