* Added libvirtd logging functionality with new UCR variables: libvirt/log/level, libvirt/log/filters, libvirt/log/outputs (Bug #34170)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48929 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-node/conffiles/etc/libvirt/libvirtd.conf
+++ b/virtualization/univention-virtual-machine-manager-node/conffiles/etc/libvirt/libvirtd.conf
@@ -307,6 +307,11 @@ print "tls_allowed_dn_list = %s" % repr(tls_allowed_dn_list)
 # Logging level: 4 errors, 3 warnings, 2 informations, 1 debug
 # basically 1 will log everything possible
 #log_level = 3
+@!@
+log_level = configRegistry.get('libvirt/log/level','4')
+if log_level:
+	print "log_level = %s" % log_level
+@!@
 
 # Logging filters:
 # A filter allows to select a different logging level for a given category
@@ -327,6 +332,11 @@ print "tls_allowed_dn_list = %s" % repr(tls_allowed_dn_list)
 # log_filters="3:remote 4:event"
 # to only get warning or errors from the remote layer and only errors from
 # the event layer.
+@!@
+log_filters = configRegistry.get('libvirt/log/filters')
+if log_filters:
+	print 'log_filters = "%s"' % log_filters
+@!@
 
 # Logging outputs:
 # An output is one of the places to save logging informations
@@ -347,6 +357,9 @@ print "tls_allowed_dn_list = %s" % repr(tls_allowed_dn_list)
 # e.g.:
 # log_outputs="3:syslog:libvirtd"
 # to log all warnings and errors to syslog under the libvirtd ident
+@!@
+print 'log_outputs = "%s"' % configRegistry.get('libvirt/log/outputs', '1:file:/var/log/libvirt/libvirtd.log')
+@!@
 
 # Log debug buffer size: default 64
 # The daemon keeps an internal debug log buffer which will be dumped in case
