--- a/doc/errata/staging/2014-03-31-univention-samba4.yaml
+++ b/doc/errata/staging/2014-03-31-univention-samba4.yaml
@@ -2,12 +2,16 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-samba4
-fix: 3.0.39-18.573.201403311921
+fix: 3.0.39-19.574.201404011357
 note: 
-version: [0]
+version: [1]
 desc: |
- This errata enables MSDFS support on Samba4 DCs by default.
- With this new setting Windows clients ask for DFS redirects
- for the sysvol share, which may improve efficient network
- usage in branch site configurations.
-bug: [34326]
+  This update fixes the following issues:
+  * This errata enables MSDFS support on Samba4 DCs by default.
+    With this new setting Windows clients ask for DFS redirects
+    for the sysvol share, which may improve efficient network
+    usage in branch site configurations.
+  * univention-samba4-backup has been added to backup the samba
+    provision directory. This tool is periodically executed by
+    cron (configurable via the UCR variable samba4/backup/cron)
+bug: [34326,34113]
