--- a/doc/errata/staging/2014-03-14-univention-virtual-machine-manager-node.yaml
+++ b/doc/errata/staging/2014-03-14-univention-virtual-machine-manager-node.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-virtual-machine-manager-node
-fix: 2.0.5-7.78.201404011429
+fix: 2.0.5-8.79.201404030845
 note:
 version: [1]
 desc: |
@@ -10,8 +10,6 @@ desc: |
   * Add libvirt-check.sh to virtualization nodes. It periodically tests if
     libvirtd responds and restarts libvirtd if necessary.
   * Change libvirt-bin initscript to use sv force-stop and sv force-restart.
-  * The documentation for configuring bridges has been moved from the extended
-    documentation into the main manual. The links were updated accordingly.
   * Added libvirtd logging functionality with new UCR variables:
     libvirt/log/level, libvirt/log/filters, libvirt/log/outputs
-bug: [33966,33444, 34170]
+bug: [33966,34170]
