* Bug #33990: update to Dojo 1.9.3; fix detection of IE11
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49018 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/control
+++ b/management/univention-management-console-frontend/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  ucslint-univention,
- univention-dojo-dev,
+ univention-dojo-dev (>=7.0.6-2~),
  univention-config-dev,
  univention-management-console-dev,
  imagemagick,
