--- a/doc/errata/staging/2014-03-07-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-03-07-univention-management-console-frontend.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-management-console-frontend
-fix: 3.0.152-24.822.201403202249
+fix: 3.0.152-25.823.201404031315
 note:
 version: [1]
 desc: |
@@ -11,4 +11,5 @@ desc: |
     clients IP address.
   * The UMC-web-server uses apache as a proxy server. The timeout for proxy
     requests is now configured by the UCR variable umc/http/session/timeout
-bug: [34288, 34005]
+  * The detection of Internet Explorer 11 has been fixed.
+bug: [34288, 34005, 33990]
