Add _60_umc-system/10_umc-service-list (Bug #34445) A basic test, queries umc module services.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49096 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -412,6 +412,15 @@ Provides: ucs-test-module
 Description: Test scripts to test the app center
  This package includes test-cases for the app center.
 
+Package: ucs-test-umc-system
+Architecture: all
+Recommends: ucs-test-framework
+Depends: ucs-test-libs (= ${source:Version}),
+ ${misc:Depends}
+Provides: ucs-test-module
+Description: Test scripts to test the UMC system modules
+ This package includes test-cases for the UMC system modules.
+
 Package: ucs-test-modules-all
 Architecture: all
 Depends:
@@ -446,6 +455,7 @@ Depends:
  ucs-test-ucr,
  ucs-test-adconnector,
  ucs-test-appcenter,
+ ucs-test-umc-system,
 # ucs-test-ucsschool,
 # ucs-test-login
 Description: UCS test environment meta package
