--- a/management/univention-directory-manager-modules/debian/control
+++ b/management/univention-directory-manager-modules/debian/control
@@ -20,8 +20,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-smbpasswd,
  shell-univention-lib,
  python-univention-lib (>= 3.0.25-5),
- python-univention-directory-manager-cli (= ${binary:Version}),
- univention-ldap-server (>=10.0.17-4) | univention-server-member | univention-basesystem
+ python-univention-directory-manager-cli (= ${binary:Version})
 Provides: ${python:Provides}
 Replaces: python-univention-lib (<< 1.0.15-1)
 Description: UCS - Modules for administration tools
