* fix small typo (Bug #34104)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49135 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-03-19-univention-lib.yaml
+++ b/doc/errata/staging/2014-03-19-univention-lib.yaml
@@ -7,6 +7,6 @@ note:
 version: [1]
 desc: |
   * Move files in ldap_extension.py with shuitl.move instead
-    os.rename to support different partitions for soure and
+    os.rename to support different partitions for source and
     destination file.
 bug: [34104]
