--- a/doc/errata/staging/2014-03-19-univention-lib.yaml
+++ b/doc/errata/staging/2014-03-19-univention-lib.yaml
@@ -6,7 +6,7 @@ fix: 3.0.26-18.219.201403191318
 note:
 version: [1]
 desc: |
-  * Move files in ldap_extension.py with shuitl.move instead
+  * Move files in ldap_extension.py with shutil.move instead
     os.rename to support different partitions for source and
     destination file.
 bug: [34104]
