--- a/services/univention-squid/conffiles/etc/squid3/squid.conf
+++ b/services/univention-squid/conffiles/etc/squid3/squid.conf
@@ -214,7 +214,7 @@ print
 
 redirect = configRegistry.get("squid/redirect")
 if redirect:
-	if configRegistry.get("squid/redirect") == "squidguard":
+	if redirect == "squidguard":
 		print 'url_rewrite_program /usr/bin/squidGuard -c /etc/squid/squidGuard.conf'
 	else:
 		print 'url_rewrite_program %s' % redirect
