modified 2014-04-08-ucs-test.yaml (Bug #34348)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49158 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-04-08-ucs-test.yaml
+++ b/doc/errata/staging/2014-04-08-ucs-test.yaml
@@ -2,10 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: ucs-test
-fix: 4.0.164-28.704.201404081251
+fix: 4.0.164-29.705.201404081318
 note:
 version: [1]
 desc: |
   * A few UDM tests had a problem when the UDM-CLI server terminated while
-    they were trying to stop it.
+    they were trying to stop it
 bug: [34348]
