Small adjustment for Bug #34439
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49163 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-04-03-heimdal.yaml
+++ b/doc/errata/staging/2014-04-03-heimdal.yaml
@@ -6,7 +6,7 @@ fix: 1.6~git20120403+dfsg1-2.229.201404031929
 note: 
 version: [1]
 desc: |
- This errata fixes two issues in Heimdal Kerberos:
+ This update fixes two issues in Heimdal Kerberos:
  * Support domain account lockout on Samba/AD domain controllers
  * Joining Windows clients without pre-synchronized clocks
 bug: [34443, 34439]
