--- a/doc/errata/staging/2014-02-28-univention-squid.yaml
+++ b/doc/errata/staging/2014-02-28-univention-squid.yaml
@@ -6,8 +6,8 @@ fix: 7.0.3-5.216.201404081211
 note:
 version: [1]
 desc: |
-  This errata update fixes several issues:
-  * "cache_dir null /tmp" is no longer set if cache is disabled.
+  This update fixes several issues:
+  * "cache_dir null /tmp" is no longer set if caching is disabled.
   * The value of squid/redirect is now used as option for the
     "url_rewrite_program" directive.  
     Special case: If squid/redirect = squidguard then
