--- a/doc/errata/staging/2014-04-03-heimdal.yaml
+++ b/doc/errata/staging/2014-04-03-heimdal.yaml
@@ -8,5 +8,6 @@ version: [1]
 desc: |
  This update fixes two issues in Heimdal Kerberos:
  * Support domain account lockout on Samba/AD domain controllers
- * Joining Windows clients without pre-synchronized clocks
+ * Joining Windows clients without pre-synchronized clocks is now
+   possible
 bug: [34443, 34439]
