--- a/test/ucs-test/debian/rules
+++ b/test/ucs-test/debian/rules
@@ -3,7 +3,7 @@
 # Univention UCS test
 #  rules file for the debian package
 #
-# Copyright 2013 Univention GmbH
+# Copyright 2013-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -41,4 +41,4 @@ override_dh_install:
 override_dh_auto_test:
 	ucslint
 	! find -type f -exec grep '^source\>' {} +
-	find tests -type f \( \( -perm -0755 -exec grep -q '^#! */usr/share/ucs-test/runner ' {} \; -prune \) -o \( -not -perm /0111 -not -exec grep -q '^#! */usr/share/ucs-test/runner ' {} \; -prune \) -o -ls \)
+	find tests -name .svn -prune -o -type f \( \( -perm -0755 -exec grep -q '^#! */usr/share/ucs-test/runner ' {} \; -prune \) -o \( -not -perm /0111 -not -exec grep -q '^#! */usr/share/ucs-test/runner ' {} \; -prune \) -o -ls \)
