--- a/doc/errata/staging/2014-03-05-univention-management-console-module-adtakeover.yaml
+++ b/doc/errata/staging/2014-03-05-univention-management-console-module-adtakeover.yaml
@@ -6,5 +6,5 @@ fix: 1.0.10-16.20.201404031237
 note:
 version: [0, 1]
 desc: |
-  This update adds an UMC module for the Active Directory takeover.
+  This update adds a UMC module for the Active Directory takeover.
 bug: [34019, 34139]
