Bug #34315 PAM: Fix deprecation warning
Convert to UCRWARNING

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49334 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/conffiles/etc/security/pam_env.conf
+++ b/base/univention-pam/conffiles/etc/security/pam_env.conf
@@ -1,4 +1,4 @@
-@%@BCWARNING=# @%@
+@%@UCRWARNING=# @%@
 
 # This is the configuration file for pam_env, a PAM module to load in 
 # a configurable list of environment variables for a 
