--- a/base/univention-pam/debian/rules
+++ b/base/univention-pam/debian/rules
@@ -35,9 +35,9 @@ override_dh_auto_install:
 	univention-install-config-registry
 	dh_auto_install
 
-override_dh_auto_build:
+override_dh_auto_test:
 	ucslint
-	dh_auto_build
+	run-parts -v --regex='^test.*' tests
 
 %:
 	dh $@
