--- a/doc/errata/staging/2014-04-11-univention-novnc.yaml
+++ b/doc/errata/staging/2014-04-11-univention-novnc.yaml
@@ -6,7 +6,7 @@ fix: 0.4+0+20131014+git142aa45-4.5.201404111632
 note:
 version: [1]
 desc: |
-  * Add HTML Metatags to forbid caching of vnc_auto.html. This
+  * Add HTML meta tags to forbid caching of vnc_auto.html. This
     avoids certificate problems with https connections while using
-    Internet Explorer
+    Internet Explorer.
 bug: [33968]
