--- a/doc/errata/staging/2014-04-07-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-04-07-univention-directory-manager-modules.yaml
@@ -18,4 +18,7 @@ desc: |
   * The dependency list of the package has been updated. Prior to this change,
     slapd was left installed on a memberserver when using the appliance mode
     which could lead to problems when this system was querying LDAP.
-bug: [34395, 34421, 23765, 33843, 34201]
+  * UDM no longer moves temporary objects to cn=univention, because
+    cn=univention is ignored by the S4 connector and the S4 connector does not
+    recognize the move.
+bug: [34395, 34421, 23765, 33843, 34201, 34266]
