--- a/doc/errata/staging/2014-03-03-univention-squid-kerberos.yaml
+++ b/doc/errata/staging/2014-03-03-univention-squid-kerberos.yaml
@@ -6,9 +6,9 @@ fix: 3.0.2-6.16.201404081604
 note:
 version: [1]
 desc: |
-  This errata update fixes several issues:
+  This update fixes several issues:
   * The join script now checks if the service principal account
     already exists.
-  * The saltPrincipal has been added to the samba4 keytab entry
+  * The saltPrincipal has been added to the Samba 4 keytab entry
     for the proxy service principal.
 bug: [33779, 32292]
