--- a/doc/errata/published/2014-04-03-univention-management-console-module-udm.yaml
+++ b/doc/errata/published/2014-04-03-univention-management-console-module-udm.yaml
@@ -6,9 +6,9 @@ fix: 4.0.97-21.445.201404041121
 note:
 version: [1]
 desc: |
-  This errata update fixes several issues:
+  This update fixes several issues:
   * The "Change password" module showed an endless loading animation after
-    successfully applying changes. Now the form is properly reloading.
+    successfully applying changes. Now the form is reloading properly.
   * The labels for widgets regarding the type of LDAP objects have been changed
     as the old ones could not reflect the grammatical case.
 bug: [34367, 34038]
