univention-radius: update copyright and control (Bug #29465)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49424 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-radius/debian/control
+++ b/services/univention-radius/debian/control
@@ -14,3 +14,6 @@ Depends: univention-config-registry,
  univention-config
 Description: freeradius 802.1X integration package for Univention Corporate Server
  Sets up a freeradius RADIUS server to support 802.1X authenticators
+Replaces: ucs-school-radius-802.1x
+Provides: ucs-school-radius-802.1x
+Conflicts: ucs-school-radius-802.1x
