--- a/doc/errata/staging/2014-04-10-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-04-10-univention-s4-connector.yaml
@@ -12,4 +12,6 @@ desc: |
   * The start of multiple S4 connector instances is now prevented
   * While creating a user in UCS a stronger password is used which
     fulfill the password complexity settings
-bug: [31320,34394,34410,34478]
+  * The entryUUID of deleted objects in OpenLDAP is now saved to a
+    local cache. This will prevent a recreation of deleted objects.
+bug: [31320,34394,34410,34478,32263]
