--- a/doc/errata/staging/2014-04-10-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-04-10-univention-s4-connector.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-s4-connector
-fix: 8.0.33-37.464.201404220746
+fix: 8.0.33-38.465.201404221513
 note: 
 version: [1]
 desc: |
@@ -15,4 +15,8 @@ desc: |
   * The entryUUID of deleted objects in OpenLDAP is now saved to a
     local cache. This will prevent a recreation of deleted objects.
   * The synchronization has been changed to a diff based algorithm.
-bug: [31320,34394,34410,34478,32263,33621]
+  * The UCR variable connector/s4/listener/disabled has been added.
+    If it is set to true the listener does not write any changes.
+    This is helpful on a domain controller backup. The variable is
+	not set by default during this upgrade.
+bug: [31320,34394,34410,34478,32263,33621,33858]
