--- a/doc/errata/staging/2014-04-25-univention-radius.yaml
+++ b/doc/errata/staging/2014-04-25-univention-radius.yaml
@@ -6,5 +6,5 @@ fix: 1.0.0-5.5.201404251249
 note:
 version: [0, 1]
 desc: |
-  This update adds an UMC module for RADIUS.
+  This update adds the package univention-radius to UCS.
 bug: [29465]
