Bug #26910 et al
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49709 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-03-07-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-03-07-univention-management-console-frontend.yaml
@@ -6,10 +6,9 @@ fix: 3.0.152-25.823.201404031315
 note:
 version: [1]
 desc: |
-  This errata update fixes several issues:
-  * Add method in the univention-management-console-web-server to get the
-    client's IP address.
-  * The UMC-web-server uses apache as a proxy server. The timeout for proxy
+  This update fixes the following issues:
+  * Add a method to the UMC web server to retrieve the client's IP address.
+  * The UMC web server uses Apache as a proxy server. The timeout for proxy
     requests is now configured by the UCR variable umc/http/session/timeout
   * The detection of Internet Explorer 11 has been fixed.
 bug: [34288, 34005, 33990]
