* Remove dependency on icedtea6-plugin, it is no longer available in current   OpenJDK packages (Bug #33540)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49818 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-java/debian/control
+++ b/desktop/univention-java/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper, ucslint-univention
 
 Package: univention-java
 Architecture: any
-Depends: openjdk-6-jre, icedtea6-plugin, ia32-libs-gtk [amd64]
+Depends: openjdk-6-jre, ia32-libs-gtk [amd64]
 Description: UCS - Java support
  This package provides Java support for UCS.
  .
