--- a/doc/errata/staging/2014-04-10-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-04-10-univention-s4-connector.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-s4-connector
-fix: 8.0.33-39.466.201404221525
+fix: 8.0.33-42.469.201405060826
 note: 
 version: [1]
 desc: |
@@ -19,4 +19,6 @@ desc: |
     If it is set to true the listener does not write any changes.
     This is helpful on a domain controller backup. The variable is
 	not set by default during this upgrade.
-bug: [31320,34394,34410,34478,32263,33621,33858]
+  * During the group membership synchronization from Samba 4 to
+    OpenLDAP an object mapping problem has been fixed.
+bug: [31320,34394,34410,34478,32263,33621,33858,34197]
