Bug #26137: run ucs-test scripts only if UCS@school installation was successful / use utils-local.sh
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49857 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-210-ucsschool-update-3.2-to-3.2-testing-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-210-ucsschool-update-3.2-to-3.2-testing-singleserver-s3.cfg
@@ -51,7 +51,7 @@ command4:
  . utils.sh; install_apps ucsschool
  . utils.sh; run_join_scripts
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 3
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -64,12 +64,8 @@ command7:
  . utils.sh; install_apps_test_packages ucsschool
 command8:
  # run tests
- . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master210_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master210_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master210_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master210_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master210_IP]:/var/log/samba/* .
+ . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master210_IP]
 command9:
  halt -p
 files:
