--- a/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
@@ -52,7 +52,7 @@ command4:
  . utils.sh; install_apps ucsschool
  . utils.sh; run_join_scripts
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -M
+ /root/schoolinstaller.py -uAdministrator -p univention -M && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
@@ -92,7 +92,7 @@ command4:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 4
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
@@ -132,7 +132,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 4
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
@@ -144,12 +144,8 @@ command7:
  . utils.sh; install_apps_test_packages ucsschool
 command8:
  # run tests
- . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2092_IP]:/var/log/samba/* .
+ . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2092_IP]
 command9:
  halt -p
 files:
