--- a/test/ucs-ec2-tools/examples/jenkins/autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.cfg
@@ -51,7 +51,7 @@ command4:
  . utils.sh; install_apps ucsschool
  . utils.sh; run_join_scripts
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -M
+ /root/schoolinstaller.py -uAdministrator -p univention -M && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -91,7 +91,7 @@ command3:
 command4:
  . utils.sh; install_apps ucsschool
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 4
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -131,7 +131,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 4
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -144,12 +144,8 @@ command7:
  . utils.sh; install_apps_test_packages ucsschool
 command8:
  # run tests
- . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2132_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2132_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2132_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2132_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2132_IP]:/var/log/samba/* .
+ . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2132_IP]
 command9:
  halt -p
 files:
